# Qt

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
MusicPlayer/: CMakeLists.txt  HttpManager.cpp  HttpManager.h  LyricWidget.cpp  LyricWidget.h  Music.cpp  Music.h  MusicList.cpp  MusicList.h  MusicListWidget.cpp  MusicListWidget.h  MusicPlay.cpp  MusicPlay.h  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SVGeditor/: kcanvas.cpp  kcanvas.h  kcanvasparamsbar.cpp  kcanvasparamsbar.h  kcircle.cpp  kcircle.h  kcolorbox.cpp  kcolorbox.h  kglobaldata.cpp  kglobaldata.h  kline.cpp  kline.h  kmainwindow.cpp  kmainwindow.h  kmainwindow.qrc  kpen.cpp  kpen.h  krect.cpp  krect.h  kshape.cpp  kshape.h  kshapefactory.cpp  kshapefactory.h  ksvgmainwindow.cpp  ksvgmainwindow.h  ktext.cpp  ktext.h  ktoolbar.cpp  ktoolbar.h  ktoolbutton.cpp  kvaluebox.cpp
cmake/: find_libdatachannel.cmake  find_libsamplerate.cmake  find_obs.cmake  find_openh264.cmake  find_opus.cmake  find_spdlog.cmake
res/: resource.qrc
res/skin/default/qss/: LoginDlg.qss
src/: main.cpp
src/capture/: AudioPlayer.cpp  AudioPlayer.h  CaptureEngine.cpp  CaptureEngine.h  CaptureTypes.h
src/codec/: AudioEncoder.cpp  AudioEncoder.h  VideoEncoder.cpp  VideoEncoder.h
src/engine/: Engine.cpp  Engine.h
src/logger/: LogLevel.h  Logger.cpp  Logger.h
src/network/: NetworkEngine.cpp  NetworkEngine.h
src/transport/: ITransportEngine.h  RtcPullTransport.cpp  RtcPullTransport.h  RtcPushTransport.cpp  RtcPushTransport.h  RtcTransportBase.cpp  RtcTransportBase.h  TransportDefine.h  TransportEngine.cpp  TransportEngine.h  UdpTransport.cpp  UdpTransport.h  WHIPWHEPClient.cpp  WHIPWHEPClient.h
src/transport/codec/audio_codec/: AudioCodecFactory.cpp  AudioCodecFactory.h  AudioCodecInterface.h  OpusCodec.cpp  OpusCodec.h
src/transport/codec/video_codec/: H264Codec.cpp  H264Codec.h  VideoCodecFactory.cpp  VideoCodecFactory.h  VideoCodecInterface.h
src/widgets/: ChatPanel.cpp  ChatPanel.h  CreateMeetingDialog.cpp  CreateMeetingDialog.h  JoinMeetingDialog.cpp  JoinMeetingDialog.h  LoginDlg.cpp  LoginDlg.h  MainWindow.cpp  MainWindow.h  MeetingRoom.cpp  MeetingRoom.h  ParticipantsPanel.cpp  ParticipantsPanel.h
ui/: CreateMeetingDialog.ui  JoinMeetingDialog.ui  LoginDlg.ui  MainWindow.ui  MeetingRoom.ui
